# binance-orderbook

./: Pulsar - Rust Test.docx  README.md
binance-orderbook/: Cargo.toml  package-lock.json
binance-orderbook/src/: enums.rs  error.rs  helper.rs  main.rs  menu.rs  process.rs  structs.rs  tests.rs
binance-orderbook/test-bed/: book_ticker_update_input.json  depth_update.json
