[package]
name = "binance-orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.3.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"